fdo#75304: Set external reference info to ScCompiler.

And remove this excessive const fetish which was unfortunately necessary to
get this to compile.  Setting the container const is good enough.

Change-Id: I2c6cc55a88643a68e065c4518cdf069c247f4f02